Fix window height on mobile

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,7 +1,6 @@
 @import "constants";
 
 body {
-  min-height: 100vh;
   margin: 0;
   background: $yellow-dark;
   font-family: 'Space Grotesk', sans-serif;
